--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "mongoose": "^8.2.4",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
