--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.6.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "styled-components": "^6.1.8",
+    "stylis": "^4.3.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
